<?xml version="1.0"?>
<package format="2">
  <name>ping_altimeter_driver</name>
  <version>0.0.1</version>
  <description>ROS driver for Blue Robotics Ping altimeter using ping-python</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <export>
  </export>
</package>
