<?xml version="1.0"?>
<package format="3">
  <name>ping_altimeter_driver</name>
  <version>0.0.1</version>
  <description>ROS 2 driver for Blue Robotics Ping1D altimeter.</description>

  <maintainer email="ghogari@usc.edu">Arsalan Ghogari</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>bluerobotics-ping</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

